# VinHRenderer

./: CMakeLists.txt  Readme.md  main.cpp
include/: camera.h  config.h  gl.h  gmath.h  initializer.h  light.h  log.h  matrix.h  model.h  shader.h  sigslot.h
src/: camera.cpp  depth_shader.cpp  gl.cpp  initializer.cpp  light.cpp  matrix.cpp  model.cpp  phong_shader.cpp  texture_shader.cpp  white_shader.cpp
